--- a/style.css
+++ b/style.css
@@ -1,52 +1,24 @@
 body{
-    background-color: rgb(255,255,0);
+    background-color: rgb(250, 241, 215);
 }
 
-span{
-    color: red;
-}
 
-div{
-    background-color: aquamarine;
-}
 
-.hero{
-    background-color: green;
-    height: 75vh;
-    width: 75vw;
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 25px;
-    position: relative;
-}
+/* ----------- SMART PHONES ----------- */
+ 
+ 
+@media only screen and (max-width: 800px) {
 
-.intro{
-    background-color: bisque;
-}
+    body{
+        background: #FDF0FB;
+    }
 
-.fun{
-    background-color: gray;
-    height: 40px;
-    width: 200px;
 }
-
-#anthonywarnick{
-    background-color: blue;
-    position: absolute;
-    bottom:50px;
-    right:50px;
-}
-
-.grid_example{
-    width:75vw;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 40px 100px;
-    grid-row-gap: 5px;
-    grid-column-gap: 5px;
-    margin: auto;
-    background-color: tomato;
-}
-.item{
-    background-color: aqua;
+ 
+/* ----------- TABLETS ----------- */
+ 
+@media only screen and (min-width: 800px) and (max-width: 1280px) {
+    body{
+        background: #0000FF;
+    }
 }
