--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 @media only screen and (max-width: 800px) {
 
     body{
-        background: #FDF0FB;
+        background-color: #FDF0FB;
     }
 
 }
@@ -19,6 +19,6 @@ body{
  
 @media only screen and (min-width: 800px) and (max-width: 1280px) {
     body{
-        background: #0000FF;
+        background-colors: #0000FF;
     }
 }
