--- a/style.css
+++ b/style.css
@@ -1,15 +1,8 @@
-@import url("https://use.typekit.net/lun6vfp.css");
-
+@import url("https://use.typekit.net/zxd7cxk.css");
+    
 body{
     background-color: rgb(250, 241, 215);
-    font-family: poleno, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 5em;
-    letter-spacing: 50px;
-    text-align: center;
 }
-
 
 
 /* ----------- SMART PHONES ----------- */
