--- a/style.css
+++ b/style.css
@@ -1,25 +1,3 @@
-@import url("https://use.typekit.net/zxd7cxk.css");
-    
 body{
-    background-color: rgb(250, 241, 215);
-}
-
-
-/* ----------- SMART PHONES ----------- */
- 
- 
-@media only screen and (max-width: 800px) {
-
-    body{
-        background-color: #FDF0FB;
-    }
-
-}
- 
-/* ----------- TABLETS ----------- */
- 
-@media only screen and (min-width: 800px) and (max-width: 1280px) {
-    body{
-        background-color: #0000FF;
-    }
+    background-color: aqua;
 }
