Switch to codesandbox homepage

--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -2,4 +2,6 @@
 <div class="footer">
     <p>&copy; Anthony Warnick</p>
 </div> 
+<script src="//cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
+<script src="script.js"></script>
 <!-- end of partials/footer -->
