--- a/css/style.css
+++ b/css/style.css
@@ -1,102 +1,253 @@
-body{
-    margin: 0;
-    padding: 0;
+:root {
+  --background: white;
+  --border-size: 1px;
+  --padding: 3rem;
 }
 
-img{
-    max-width: 100%;
-    max-height: 100%;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-a{
-    text-decoration: none;
-    color: black;
-}
-a:hover{
-    color: yellow;
-}
-
-
-.header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 50px;
-    background-color: aqua;
+html,
+body {
+  font-family: sans-serif;
+  background-color: rgb(255, 255, 255);
+  margin: 0;
+  padding: 0;
 }
 
-.menu{
-    list-style-type:none;
+img {
+  max-width: 100%;
+  display: block;
 }
 
-.menu li{
-    float:left;
-    margin-left: 10px;
+a {
+  text-decoration: none;
+  color: blue;
 }
 
-.menu a{
-    text-decoration: none;
-    color:black;
-    font-size: 1.3em;
+a:hover {
+  color: gray;
 }
 
-.menu a:hover{
-    color:yellow;
+a:visited {
+  color: blue;
 }
 
+/* menu */
 
-
-.footer{
-    height: 20px;
-    background-color: magenta;
-    padding: 20px;
+.site-header {
+  width: calc(100vw - 6rem);
+  position: fixed;
+  top: 0;
+  left: var(--padding);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  border-bottom: var(--border-size) solid black;
+  background-color: var(--background);
+  padding: 1rem 0 1rem 0;
+  line-height: 1.1rem;
+  margin: 0;
+  z-index: 100;
 }
 
-.footer p{
-    margin: 0;
+.site-title {
+  margin: 0;
+  padding: 0;
 }
 
-.content{
-    margin-top: 100px;
-    min-height: 100vh;
+.main-nav {
+  margin: 0;
+  padding: 0;
+  align-self: end;
 }
 
-.postlist{
-    width: 80vw;
-    margin: auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
+.main-nav ul {
+  float: right;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-
-
-.work__title{
-    width: 100vw;
-    padding-top: 25vh;
-    padding-bottom: 25vh;
-
-    text-align: center;
-    font-size: 7em;
+.main-nav li {
+  display: inline;
+  position: relative;
+  padding-right: 1rem;
 }
 
-.work__layout{
-    width: 80vw;
-    margin: auto;
-
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-gap: 20px;
+.main-nav li:last-of-type {
+  padding-right: 0;
 }
 
-.work__support_images{
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
+.main-nav li:after {
+  content: "/";
+  padding-left: 1rem;
 }
 
-.work__support_images img{
-    display: block;
+.main-nav li:last-of-type:after {
+  content: none;
+  padding-left: 0;
+}
+
+/* footer */
+
+.footer {
+  width: calc(100vw - (var(--padding) * 2));
+  margin: auto;
+}
+
+.footer.fixed {
+}
+
+/* Table Page */
+
+.works {
+  width: 100%;
+  margin-top: var(--padding);
+}
+
+.content {
+  min-height: 100vh;
+}
+
+.works {
+  font-weight: normal;
+}
+
+.works .list {
+  margin: 0;
+  padding: 0 var(--padding);
+}
+
+.works li {
+  padding: 1rem 1rem;
+  border-bottom: var(--border-size) solid black;
+  border-spacing: 0 1rem;
+  text-align: left;
+
+  display: grid;
+  grid-template-columns: 4fr 8ch 1fr 1fr 2fr 12ch;
+  /* grid-gap: 1rem; */
+}
+
+.works li:empty {
+  border-bottom: none;
+}
+
+.works li:hover {
+  color: white;
+  cursor: pointer;
+  background-color: blue;
+}
+
+.works li:hover a {
+  color: white;
+}
+
+.works li a:hover {
+  text-decoration: underline;
+}
+
+.works li:nth-of-type(2n + 2) {
+  /* background-color: rgb(211, 204, 250); */
+}
+
+.works li:first-child {
+  /* margin-top: 2rem; */
+}
+
+.works .image {
+  max-width: 100px;
+  display: none;
+}
+
+.works .year {
+  vertical-align: top;
+}
+
+.works .title {
+  vertical-align: top;
+}
+
+.works .warnickNumber {
+  vertical-align: top;
+}
+
+.works .dimentions {
+  vertical-align: top;
+}
+
+.works .materials {
+  vertical-align: top;
+}
+
+.works .type {
+  vertical-align: top;
+}
+
+.works .work-sorters {
+  position: -webkit-sticky;
+  position: sticky;
+  top: calc(var(--border-size) + 2rem + 1.1rem);
+  background-color: white;
+  line-height: 1.1rem;
+  display: grid;
+  border-bottom: var(--border-size) solid black;
+  grid-template-columns: 4fr 8ch 1fr 1fr 2fr 12ch;
+  /* grid-gap: 1rem; */
+
+  margin: 0 var(--padding);
+}
+
+.sort {
+  /* padding: 10px; */
+  text-align: left;
+  cursor: pointer;
+  display: inline-block;
+  text-decoration: none;
+  padding: 1rem 1rem;
+}
+.sort:hover {
+  text-decoration: underline;
+  background-color: blue;
+  color: white;
+}
+.sort:focus {
+  outline: none;
+}
+.sort:after {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  content: "";
+  position: relative;
+  top: -10px;
+  right: -5px;
+}
+.sort.asc:after {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid black;
+  content: "";
+  position: relative;
+  top: 4px;
+  right: -5px;
+}
+.sort.desc:after {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid black;
+  content: "";
+  position: relative;
+  top: -4px;
+  right: -5px;
 }
