Codesandbox Moved Over

--- a/_includes/partials/postlist.njk
+++ b/_includes/partials/postlist.njk
@@ -1,4 +1,4 @@
-<div class="works" id="work-list" role="main" >
+{# <div class="works" id="work-list" role="main" >
   <div class="work-sorters">
     <!-- IMAGE -->
     <!-- Title -->
@@ -47,5 +47,103 @@
           <div class="type">{{ post.data.type }}</div>
       </li>
     {% endfor %}
+  </ul>
+</div> #}
+
+<div class="works" id="work-list" cellspacing="0" cellpadding="0" role="main">
+  <div class="work-sorters">
+    <!-- IMAGE -->
+    <!-- Title -->
+    <!-- Year -->
+    <!-- Warnick Number -->
+    <!-- Dimensions -->
+    <!-- Materials -->
+    <!-- Type -->
+    <!-- Color -->
+    <!-- Collaborators -->
+    <!-- Location -->
+    <!-- Price -->
+    <!-- Edition -->
+    <!-- Collection -->
+
+    <!-- Available -->
+
+    <!-- Exhibition title -->
+    <!-- Venue  -->
+    <!-- Period -->
+    <div class="image"></div>
+    <div class="sort" data-sort="title">Title</div>
+    <div class="sort" data-sort="year">Year</div>
+    <div class="sort" data-sort="warnickNumber">Warnick Number</div>
+    <div class="sort" data-sort="dimentions">Dimensions</div>
+    <div class="sort" data-sort="materials">Materials</div>
+    <div class="sort" data-sort="type">Type</div>
+  </div>
+  <ul class="list">
+    <li>
+      <a href="http://google.com">
+        <div class="image">
+          <img src="https://picsum.photos/1920/1440" alt="FPO - 4:3" />
+        </div>
+        <div class="title">A dive liansmutation Of Flesh To Gold</div>
+        <div class="year">2018</div>
+        <div class="warnickNumber" data-id="1">00.00.00.xx</div>
+        <div class="dimentions">72" x 96" x 4"</div>
+        <div class="materials">Prisoner produced off-set prints</div>
+        <div class="type">Print</div>
+      </a>
+    </li>
+    <li>
+      <a href="http://google.com">
+        <div class="image">
+          <img src="https://picsum.photos/1920/1440" alt="FPO - 4:3" />
+        </div>
+        <div class="title">A dive liansmutation Of Flesh To Gold</div>
+        <div class="year">2018</div>
+        <div class="warnickNumber" data-id="1">00.00.00.xx</div>
+        <div class="dimentions">72" x 96" x 4"</div>
+        <div class="materials">Prisoner produced off-set prints</div>
+        <div class="type">Print</div>
+      </a>
+    </li>
+    <li>
+      <a href="http://google.com">
+        <div class="image">
+          <img src="https://picsum.photos/1920/1440" alt="FPO - 4:3" />
+        </div>
+        <div class="title">A dive liansmutation Of Flesh To Gold</div>
+        <div class="year">2018</div>
+        <div class="warnickNumber" data-id="1">00.00.00.xx</div>
+        <div class="dimentions">72" x 96" x 4"</div>
+        <div class="materials">Prisoner produced off-set prints</div>
+        <div class="type">Print</div>
+      </a>
+    </li>
+    <li>
+      <a href="http://google.com">
+        <div class="image">
+          <img src="https://picsum.photos/1920/1440" alt="FPO - 4:3" />
+        </div>
+        <div class="title">A dive liansmutation Of Flesh To Gold</div>
+        <div class="year">2018</div>
+        <div class="warnickNumber" data-id="1">00.00.00.xx</div>
+        <div class="dimentions">72" x 96" x 4"</div>
+        <div class="materials">Prisoner produced off-set prints</div>
+        <div class="type">Print</div>
+      </a>
+    </li>
+    <li>
+      <a href="http://google.com">
+        <div class="image">
+          <img src="https://picsum.photos/1920/1440" alt="FPO - 4:3" />
+        </div>
+        <div class="title">A dive liansmutation Of Flesh To Gold</div>
+        <div class="year">2018</div>
+        <div class="warnickNumber" data-id="1">00.00.00.xx</div>
+        <div class="dimentions">72" x 96" x 4"</div>
+        <div class="materials">Prisoner produced off-set prints</div>
+        <div class="type">Print</div>
+      </a>
+    </li>
   </ul>
 </div>
