--- a/tags.njk
+++ b/tags.njk
@@ -9,7 +9,7 @@ renderData:
   title: Tagged “{{ tag }}”
 ---
 
-<div class="work__title">
+<div class="tag__title">
     {{ tag | upper }}
 </div>
     
