--- a/_includes/partials/postlist.njk
+++ b/_includes/partials/postlist.njk
@@ -1,4 +1,4 @@
-{# <div class="works" id="work-list" role="main" >
+<div class="works" id="work-list" cellspacing="0" cellpadding="0" role="main">
   <div class="work-sorters">
     <!-- IMAGE -->
     <!-- Title -->
@@ -30,120 +30,19 @@
   <ul class="list">
     {% for post in postslist %}
       <li>
+        <a href="{{ post.url | url }}">
           <div class="image">
-            <a href="{{ post.url | url }}">
-              <img src="{{ post.data.featured_image | url }}" />
-            </a>
+            {# <a href="{{ post.url | url }}"><img src="{{ post.data.featured_image | url }}" /></a> #}
+            <img src="https://picsum.photos/1920/1440" alt="FPO - 4:3" />
           </div>
-          <div class="title">
-            <a href="{{ post.url | url }}">
-              {{ post.data.title }}
-            </a>
-          </div>
+          <div class="title">{{ post.data.title }}</div>
           <div class="year">{{ post.data.year }}</div>
           <div class="warnickNumber" data-id="1">{{ post.data.warnickNumber }}</div>
           <div class="dimentions">{{ post.data.dimensions }}</div>
           <div class="materials">{{ post.data.materials }}</div>
           <div class="type">{{ post.data.type }}</div>
+        </a>
       </li>
     {% endfor %}
-  </ul>
-</div> #}
-
-<div class="works" id="work-list" cellspacing="0" cellpadding="0" role="main">
-  <div class="work-sorters">
-    <!-- IMAGE -->
-    <!-- Title -->
-    <!-- Year -->
-    <!-- Warnick Number -->
-    <!-- Dimensions -->
-    <!-- Materials -->
-    <!-- Type -->
-    <!-- Color -->
-    <!-- Collaborators -->
-    <!-- Location -->
-    <!-- Price -->
-    <!-- Edition -->
-    <!-- Collection -->
-
-    <!-- Available -->
-
-    <!-- Exhibition title -->
-    <!-- Venue  -->
-    <!-- Period -->
-    <div class="image"></div>
-    <div class="sort" data-sort="title">Title</div>
-    <div class="sort" data-sort="year">Year</div>
-    <div class="sort" data-sort="warnickNumber">Warnick Number</div>
-    <div class="sort" data-sort="dimentions">Dimensions</div>
-    <div class="sort" data-sort="materials">Materials</div>
-    <div class="sort" data-sort="type">Type</div>
-  </div>
-  <ul class="list">
-    <li>
-      <a href="http://google.com">
-        <div class="image">
-          <img src="https://picsum.photos/1920/1440" alt="FPO - 4:3" />
-        </div>
-        <div class="title">A dive liansmutation Of Flesh To Gold</div>
-        <div class="year">2018</div>
-        <div class="warnickNumber" data-id="1">00.00.00.xx</div>
-        <div class="dimentions">72" x 96" x 4"</div>
-        <div class="materials">Prisoner produced off-set prints</div>
-        <div class="type">Print</div>
-      </a>
-    </li>
-    <li>
-      <a href="http://google.com">
-        <div class="image">
-          <img src="https://picsum.photos/1920/1440" alt="FPO - 4:3" />
-        </div>
-        <div class="title">A dive liansmutation Of Flesh To Gold</div>
-        <div class="year">2018</div>
-        <div class="warnickNumber" data-id="1">00.00.00.xx</div>
-        <div class="dimentions">72" x 96" x 4"</div>
-        <div class="materials">Prisoner produced off-set prints</div>
-        <div class="type">Print</div>
-      </a>
-    </li>
-    <li>
-      <a href="http://google.com">
-        <div class="image">
-          <img src="https://picsum.photos/1920/1440" alt="FPO - 4:3" />
-        </div>
-        <div class="title">A dive liansmutation Of Flesh To Gold</div>
-        <div class="year">2018</div>
-        <div class="warnickNumber" data-id="1">00.00.00.xx</div>
-        <div class="dimentions">72" x 96" x 4"</div>
-        <div class="materials">Prisoner produced off-set prints</div>
-        <div class="type">Print</div>
-      </a>
-    </li>
-    <li>
-      <a href="http://google.com">
-        <div class="image">
-          <img src="https://picsum.photos/1920/1440" alt="FPO - 4:3" />
-        </div>
-        <div class="title">A dive liansmutation Of Flesh To Gold</div>
-        <div class="year">2018</div>
-        <div class="warnickNumber" data-id="1">00.00.00.xx</div>
-        <div class="dimentions">72" x 96" x 4"</div>
-        <div class="materials">Prisoner produced off-set prints</div>
-        <div class="type">Print</div>
-      </a>
-    </li>
-    <li>
-      <a href="http://google.com">
-        <div class="image">
-          <img src="https://picsum.photos/1920/1440" alt="FPO - 4:3" />
-        </div>
-        <div class="title">A dive liansmutation Of Flesh To Gold</div>
-        <div class="year">2018</div>
-        <div class="warnickNumber" data-id="1">00.00.00.xx</div>
-        <div class="dimentions">72" x 96" x 4"</div>
-        <div class="materials">Prisoner produced off-set prints</div>
-        <div class="type">Print</div>
-      </a>
-    </li>
   </ul>
 </div>
