post close to rendering

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -8,198 +8,16 @@ templateClass: tmpl-post
       <div class="news__post_intro">
         <div>
           <h1 class="news__title">
-            <a href="#">Flux and Reflux: A Selection of Moving Images – Ansuya Blom</a>
+            <a href="#">{{ title }}</a>
           </h1>
-          <h2 class="news__subtitle">sub</h2>
-          <a href="http://johnsplace.com" rel="author" class="news__author">Willem de Rooij</a>
-          <time datetime="2021-06-24" class="news__date">2021-06-24</time>
+          <h2 class="news__subtitle">{{ subtitle }}</h2>
+          <a href="http://johnsplace.com" rel="author" class="news__author">{{ author }}</a>
+          <time datetime="{{ date }}" class="news__date">{{ date.toString() }}</time>
           <h3 class="news__tags">Event, Announcement</h3>
         </div>
       </div>
 
       <div class="news__post_item">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-          est laborum <img class="my-4" src="https://picsum.photos/1000/700" alt="mailbox" />
-        </p>
-
-        <h1 id="h1-heading">h1 Heading <a class="header-anchor" href="#h1-heading">#</a></h1>
-        <h2 id="h2-heading">h2 Heading <a class="header-anchor" href="#h2-heading">#</a></h2>
-        <h3>h3 Heading</h3>
-        <h4>h4 Heading</h4>
-        <h5>h5 Heading</h5>
-        <h6>h6 Heading</h6>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-          est laborum.
-        </p>
-
-        <h2 id="horizontal-rules">Horizontal Rules <a class="header-anchor" href="#horizontal-rules">#</a></h2>
-        <hr />
-        <h2 id="image">Images <a class="header-anchor" href="#image">#</a></h2>
-        <img class="my-4" src="https://picsum.photos/900/600" alt="mailbox" />
-        <h2 id="emphasis">Emphasis <a class="header-anchor" href="#emphasis">#</a></h2>
-        <p><strong>This is bold text</strong></p>
-        <p><strong>This is bold text</strong></p>
-        <p><em>This is italic text</em></p>
-        <p><em>This is italic text</em></p>
-        <p><s>Strikethrough</s></p>
-        <h2 id="blockquotes">Blockquotes <a class="header-anchor" href="#blockquotes">#</a></h2>
-        <blockquote>
-          <p>Blockquotes can also be nested...</p>
-          <blockquote>
-            <p>...by using additional greater-than signs right next to each other...</p>
-            <blockquote>
-              <p>...or with spaces between arrows.</p>
-            </blockquote>
-          </blockquote>
-        </blockquote>
-        <h2 id="lists">Lists <a class="header-anchor" href="#lists">#</a></h2>
-        <p>Unordered</p>
-        <ul>
-          <li>Create a list by starting a line with <code>+</code>, <code>-</code>, or <code>*</code></li>
-          <li>
-            Sub-lists are made by indenting 2 spaces:
-            <ul>
-              <li>
-                Marker character change forces new list start:
-                <ul>
-                  <li>Ac tristique libero volutpat at</li>
-                </ul>
-                <ul>
-                  <li>Facilisis in pretium nisl aliquet</li>
-                </ul>
-                <ul>
-                  <li>Nulla volutpat aliquam velit</li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li>Very easy!</li>
-        </ul>
-        <p>Ordered</p>
-        <ol>
-          <li>
-            Lorem ipsum dolor sit amet
-            <!-- <p>Lorem ipsum dolor sit amet</p> -->
-          </li>
-          <li>
-            <p>Consectetur adipiscing elit</p>
-          </li>
-          <li>
-            <p>Integer molestie lorem at massa</p>
-          </li>
-          <li>
-            <p>You can use sequential numbers...</p>
-            <ol>
-              <li>
-                <p>Consectetur adipiscing elit</p>
-              </li>
-              <li>
-                <p>Integer molestie lorem at massa</p>
-              </li>
-            </ol>
-          </li>
-          <li>
-            <p>...or keep all the numbers as <code>1.</code></p>
-          </li>
-          <li>
-            Lorem ipsum dolor sit amet
-            <!-- <p>Lorem ipsum dolor sit amet</p> -->
-          </li>
-          <li>
-            <p>Consectetur adipiscing elit</p>
-          </li>
-          <li>
-            <p>Integer molestie lorem at massa</p>
-          </li>
-          <li>
-            <p>You can use sequential numbers...</p>
-          </li>
-          <li>
-            <p>...or keep all the numbers as <code>1.</code></p>
-          </li>
-        </ol>
-        <p>Start numbering with offset:</p>
-        <ol start="57">
-          <li>foo</li>
-          <li>bar</li>
-        </ol>
-        <h2 id="code">Code <a class="header-anchor" href="#code">#</a></h2>
-        <p>Inline <code>code</code></p>
-        <p>Indented code</p>
-        <pre><code>// Some comments
-        line 1 of code
-        line 2 of code
-        line 3 of code
-        </code></pre>
-        <p>Block code "fences"</p>
-        <pre><code>Sample text here...
-        </code></pre>
-        <p>Syntax highlighting</p>
-        <pre
-          class="language-js"
-        ><code class="language-js"><span class="token keyword">var</span> <span class="token function-variable function">foo</span> <span class="token operator">=</span> <span class="token keyword">function</span> <span class="token punctuation">(</span><span class="token parameter">bar</span><span class="token punctuation">)</span> <span class="token punctuation">{</span><br>  <span class="token keyword">return</span> bar<span class="token operator">++</span><span class="token punctuation">;</span><br><span class="token punctuation">}</span><span class="token punctuation">;</span><br><br>console<span class="token punctuation">.</span><span class="token function">log</span><span class="token punctuation">(</span><span class="token function">foo</span><span class="token punctuation">(</span><span class="token number">5</span><span class="token punctuation">)</span><span class="token punctuation">)</span><span class="token punctuation">;</span></code></pre>
-        <h2 id="tables">Tables <a class="header-anchor" href="#tables">#</a></h2>
-        <table>
-          <thead>
-            <tr>
-              <th>Option</th>
-              <th>Description</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>data</td>
-              <td>path to data files to supply the data that will be passed into templates.</td>
-            </tr>
-            <tr>
-              <td>engine</td>
-              <td>engine to be used for processing templates. Handlebars is the default.</td>
-            </tr>
-            <tr>
-              <td>ext</td>
-              <td>extension to be used for dest files.</td>
-            </tr>
-          </tbody>
-        </table>
-        <p>Right aligned columns</p>
-        <table>
-          <thead>
-            <tr>
-              <th style="text-align: right;">Option</th>
-              <th style="text-align: right;">Description</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td style="text-align: right;">data</td>
-              <td style="text-align: right;">
-                path to data files to supply the data that will be passed into templates.
-              </td>
-            </tr>
-            <tr>
-              <td style="text-align: right;">engine</td>
-              <td style="text-align: right;">engine to be used for processing templates. Handlebars is the default.</td>
-            </tr>
-            <tr>
-              <td style="text-align: right;">ext</td>
-              <td style="text-align: right;">extension to be used for dest files.</td>
-            </tr>
-          </tbody>
-        </table>
-        <h2 id="links">Links <a class="header-anchor" href="#links">#</a></h2>
-        <p><a href="http://dev.nodeca.com">link text</a></p>
-        <p><a href="http://nodeca.github.io/pica/demo/" title="title text!">link with title</a></p>
-        <p>
-          Autoconverted link <a href="https://github.com/nodeca/pica">https://github.com/nodeca/pica</a> (enable linkify
-          to see)
-        </p>
+        {{ content | safe }}
       </div>
     </div>
