--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -11,9 +11,9 @@ templateClass: tmpl-post
             <a href="#">{{ title }}</a>
           </h1>
           <h2 class="news__subtitle">{{ subtitle }}</h2>
-          <a href="http://johnsplace.com" rel="author" class="news__author">{{ author }}</a>
-          <time datetime="{{ date }}" class="news__date">{{ date.toString() }}</time>
-          <h3 class="news__tags">Event, Announcement</h3>
+          <a href="{{ author.link }}" rel="author" class="news__author">{{ author.name }}</a>
+          <time datetime="{{ date }}" class="news__date">{{ date.toISOString().substring(0, 10) }}</time>
+          <h3 class="news__tags">{{ post.data.type }}</h3>
         </div>
       </div>
 
