--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -1,6 +1,6 @@
 <!-- start of partials/footer -->
 <div class="footer">
-    <p>&copy; Anthony Warnick</p>
+    <p><span class="copy-left">&copy;</span> Anthony Warnick</p>
 </div> 
 <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
 <script src="script.js"></script>
