--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -1,15 +1,11 @@
 <!-- start of partials/header -->
 <header id="masdivead" class="site-header" role="menu">
   <p class="site-title">
-    <a href="#" rel="home">Anthony Warnick</a>
+    {% set homeUrl %}/{% endset %}
+    <a href="{{ homeUrl | url }}" class="tag" rel="home">Anthony Warnick</a>
   </p>
   <nav class="main-nav">
     <ul>
-      <li>
-        {% set homeUrl %}/{% endset %}
-        <a href="{{ homeUrl | url }}" class="tag">home</a>
-      </li>
-
       {% for tag in collections.everything %}
         {% set tagUrl %}/work/{{ tag }}/{% endset %}
         <li>
