start of big json

--- a/_includes/layouts/work.njk
+++ b/_includes/layouts/work.njk
@@ -17,7 +17,7 @@ templateClass: tmpl-post
         {{ warnickNumber }}
     </div>
     <div class="hero_image">
-        <img src="{{ featured_image | url }}" alt="{{ description.short }}" />
+        {# {% image featured_image, description.short %} #}
     </div>
     <div class="dimensions">
         <div class="label">Dimensions:</div>
