move search icon

--- a/src/_includes/partials/meta.njk
+++ b/src/_includes/partials/meta.njk
@@ -3,7 +3,7 @@
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="blue">
 <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="black">
 
-{% favicon "src/_data/favicon.ico" %}
+<link rel="icon" type="image/x-icon” href="/favicon.ico" sizes="any" />
 <link rel="manifest" href="/manifest.json">
 
 <meta property="og:url" content="{{site.url}}{{ page.url }}" />
