--- a/src/_includes/partials/postlist.njk
+++ b/src/_includes/partials/postlist.njk
@@ -27,6 +27,7 @@
     <div class="sort materials" data-sort="materials">Materials</div>
     <div class="sort type" data-sort="type">Type</div>
   </div>
+  <div class="search-icon"></div>
   <ul class="list">
     {% for post in postslist %}
       <li>
