--- a/src/news.njk
+++ b/src/news.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
 eleventyNavigation:
-  key: News
+  key: '&c.'
 ---
 <div class="news">
     <div class="news_intro">
@@ -11,7 +11,6 @@ eleventyNavigation:
         reprehenderit tenetur!
     </p>
     </div>
-
     {% set newslist = collections.news %}
     {% include "partials/newslist.njk" %} 
 </div>
