--- a/src/_scss/pages/_postlist.scss
+++ b/src/_scss/pages/_postlist.scss
@@ -157,8 +157,7 @@ $screen-xl-min: 1px;
     }
     
     .image {
-      max-width: 300px;
-      display: none;
+      width: 300px;
       position: fixed;
       top: 0;
       left: 0;
