--- a/src/_scss/base/_typography.scss
+++ b/src/_scss/base/_typography.scss
@@ -1,3 +1,10 @@
+html,
+body {
+    // font-family: "Recursive", sans-serif;
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: var(--base-font-size);
+    font-weight: var(--weight);
+}
 
 
 
