--- a/src/_scss/components/_footer.scss
+++ b/src/_scss/components/_footer.scss
@@ -106,7 +106,10 @@
 
     // border: 1px solid red;
     padding: var(--border-size) 0;
+    transform: rotate(0deg);
+    transition: transform .5s;
 
+    
     div{
         width: 100%;
         border-top: var(--border-size) solid var(--main-color);
@@ -116,14 +119,16 @@
         &::after{
             content: '';
             display:block;
-            // display: none;
             position: absolute;
-            top: calc(var(--border-size) * -3);
-            height: calc(var(--border-size) * 5);
-            width: calc(var(--border-size) * 5);
-            border: var(--border-size) solid var(--main-color);
-            background-color: var(--background);
+            top: calc(var(--border-size) * -2.5);
+            height: calc(1.2rem/4);
+            width: calc(1.2rem/4);
+            background-color: var(--main-color);
             right: 20%;
+        }
+
+        &:nth-of-type(1)::after{
+            left: calc(50% - var(--dot-size));
         }
 
         &:nth-of-type(2)::after{
@@ -131,6 +136,11 @@
         }
     }
 }
+
+.filteropen .filter-icon{
+    transform: rotate(90deg);
+}
+
 
 
 .trigger-gap{
@@ -159,7 +169,7 @@
     left: var(--padding);
     right: var(--padding);
     grid-template-columns: 1fr 1fr 1fr;
-    transition: margin 1s;
+    transition: margin 0.5s;
 
     grid-column: span 3; 
     display: grid;
