--- a/src/_includes/layouts/work.njk
+++ b/src/_includes/layouts/work.njk
@@ -166,7 +166,7 @@ templateClass: tmpl-work
         <ul>
             {% for link in links %}
                 <li>
-                    <a href="{{ link[1] }}">{{ link[0] }}</a>
+                    <a href="{{ link[1] }}" target="_blank">{{ link[0] }}</a>
                 </li>
             {% endfor %}
         </ul>
